# verdify

./: .editorconfig  .env  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  .stignore  CLAUDE.md  COMPLETION_SUMMARY.md  CONTEXT.md  END_TO_END_TEST_RESULTS.md  Makefile  OPENAPI_UPDATE_SUMMARY.md  README.md  VERDIFY_BUNDLE_01_MODELS_CORE.txt  VERDIFY_BUNDLE_02_API_ROUTES.txt  VERDIFY_BUNDLE_03_CRUD_LOGIC.txt  VERDIFY_BUNDLE_04_TESTS.txt  VERDIFY_BUNDLE_05_CONFIG_INFRA.txt  VERDIFY_BUNDLE_COLLECTION_README.md  VERDIFY_CRUD_FIXES_CHECKLIST.md  VERDIFY_DEVELOPMENT_SUMMARY.md  VERDIFY_IMPLEMENTATION_PROGRESS.md  VERDIFY_MILESTONE_PROGRESS_REPORT.md  VERDIFY_SCHEMA_PARITY_BUNDLE_README.md  VERDIFY_SCHEMA_PARITY_IMPLEMENTATION.txt  VERDIFY_SCHEMA_PARITY_PLAN.md  bundle_api_routes.txt  bundle_config_infra.txt  bundle_crud_logic.txt  bundle_models_core.txt  bundle_tests.txt  docker-compose.prod.yml  docker-compose.yml  expert_review_files.txt  expert_review_implementation_complete.txt  final_openapi_t20.json  migration_skeleton_crops_naming.py  migration_skeleton_schema_parity_v1.py  models.txt  (+14 more)
.claude/: settings.json
.copier/: .copier-answers.yml
.github/: copilot-instructions-clean.md  copilot-instructions.md
Downloads/: test_recording.m4a  test_recording.yml
Scripts/: com.jasonvallery.voicenote-ingest.plist
Scripts/ingest/: README.md  __init__.py  __main__.py  audio.py  cli.py  config.py  context.py  core.py  index.py  models.py  notes.py  pipeline.py  pyproject.toml  requirements.txt  state.py  transcription.py  watcher.py
Scripts/ingest/examples/: basic_note.yml  call_recording.yml  com.jasonvallery.voicenote-ingest.plist  meeting_recording.yml
Scripts/ingest/tests/: __init__.py  test_basic.py
VoiceNotes/: _index.md  config.yml
ai-analysis-archive/: ACTUAL_CRUD_COVERAGE_ANALYSIS.md  API_COMPLIANCE_PLAN.md  COMPLIANCE_SUCCESS_REPORT.md  COMPREHENSIVE_API_TESTING_REPORT.md  COMPREHENSIVE_API_TEST_RESULTS.md  FINAL_API_TEST_ACHIEVEMENT.md  RELATIONSHIP_REVERSION_SUMMARY.md  TRUTH_ABOUT_CRUD_COVERAGE.md
api/: Dockerfile  main.py
backend/: .env  .env.example  END_TO_END_TEST_RESULTS.md  EXPERT_REVIEW_FIXES_COMPLETE.md  EXPERT_REVIEW_NEXT_STEPS.md  FOREIGN_KEY_FIX_SUMMARY.md  analyze_api_coverage.py  api_specification_analysis.json  debug_detailed_e2e.py  debug_e2e.py  debug_observation_create.py  debug_observation_create2.py  example_crud_without_relationships.py  phase_b_expert_review_summary.py  pyproject.toml  test_api_enum_compliance.py  test_controller_validation.py  test_enum_compliance.py  test_enum_fixes.py  test_expert_review_fixes.py  test_expert_review_integration.py  test_fk_constraints_real_db.py  test_foreign_key_cascades.py  test_h3_zone_crop.py  test_idempotency_constraint.py  test_idempotency_simple.py  test_output.txt  test_phase_b_validation.py  test_relationships.py  test_simple_zone_crop.py  test_state_machine_spec.py  test_unclaimed_controller_filtering.py  test_zone_crop_cascade.py  unmap_all_sensors.py
config/: ai.yaml  zones.yaml
copilot/: agent.json
db/: schema.sql
docs/: BACKLOG-SAAS-ALIGNED.md  (+34 more)
(+984 files in other folders)
